syntax = "proto2";
package gameinfo;

option go_package = "retromanager/gameinfo";

message GameExtInfo {
    repeated string genre = 1; //
    repeated string video = 2; //
    repeated string image = 3; //
    optional double rating = 4; //
    optional string developer = 5; //
    optional string publisher = 6; //
    optional string releasedate = 7; //
    optional uint32 players = 8; //
}

message GameInfo {
    optional uint64 id = 1; //
    optional uint32 platform = 2; //
    optional string display_name = 3; //
    optional uint64 file_size = 4; //
    optional string desc = 5; //
    optional uint64 create_time = 6; //
    optional uint64 update_time = 7; //
    optional string hash = 8; //
    optional GameExtInfo extinfo = 9; //
    optional string down_key = 10; //
}

message ListGameRequest {
    optional uint32 platform = 1; //
    optional uint32 offset = 2; //
    optional uint32 limit = 3; //
}

message ListGameResponse {
    repeated GameInfo list = 1; //
    optional uint32 total = 2; //
}

message FilterValue {
    optional string field = 1; //
    optional string value = 2; //
}

message RangeValue {
    optional string field = 1; //
    optional string left = 2; //
    optional string right = 3; //
}

message SortValue {
    optional string field = 1; //
    optional bool asc = 2; //
}

message SearchParam {
    repeated FilterValue filter_list = 1; //
    repeated RangeValue range_list = 2; //
    repeated SortValue sort_list = 3; //
    optional uint32 offset = 4; //
    optional uint32 limit = 5; //
}

message SearchGameRequest {
    optional SearchParam param = 1; //
}

message SearchGameResponse {
    repeated GameInfo list = 1; //
    optional uint32 total = 2; //
}

message CreateGameRequest {
    optional GameInfo item = 1; //
}

message CreateGameResponse {
    optional uint64 game_id = 1; //
}

message ModifyItem {
    optional uint32 platform = 1; //
    optional string display_name = 2; //
    optional uint64 file_size = 3; //
    optional string desc = 4; //
    optional string hash = 5; //
    optional GameExtInfo extinfo = 6; //
    optional string down_key = 7;
}

message ModifyGameRequest {
    optional uint64 game_id = 1; //
    optional ModifyItem item = 2; //
}

message DeleteGameRequest {
    optional uint64 game_id = 1; //
}

message DeleteGameResponse {

}

message FileUploadResponse {
    optional string down_key = 1; //
}

message FileUploadBeginRequest {
    optional uint64 file_size = 1; //
}

message FileUploadBeginResponse {
    optional string upload_ctx = 1; //refer: UploadIdCtx
    optional uint32 block_size = 2; //
}

message FileUploadPartResponse {

}

message FileUploadEndRequest {
    optional string upload_ctx = 1; //
    optional string file_name = 2; //
    optional string hash = 3; //
}

message FileUploadEndResponse {
    optional string down_key = 1; //
}

message UploadIdCtx {
    optional uint64 file_size = 1; //
    optional string upload_id = 2; //
    optional string down_key = 3; //
    optional uint32 block_size = 4; //
}

message GetFileMetaRequest {
    repeated string down_key = 1; //
    optional bool enable_fetch_low_level_info = 2; //
}

message FileItem {
    optional string file_name = 1; //
    optional string hash = 2; //
    optional uint64 file_size = 3; //
    optional uint64 create_time = 4; //
    optional string down_key = 5; //
    optional FileMetaLowLevelInfo low_level_info = 6; //
    optional bool exist = 7; //
}

message FileMetaLowLevelInfo {
    optional string etag = 1; //
}

message GetFileMetaResponse {
    repeated FileItem list = 1; //
}